# gcli

./: Cargo.toml
examples/: mutation.graphql
src/: main.rs
src/ast/: mod.rs
src/fmt/: mod.rs
src/graphqlclient/: mod.rs
