[package]
name = "gcli"
version = "0.1.0"
authors = ["Tabitha Rollins <tabitha@keyneston.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
#graphql_client = "0.8.0"
reqwest = "0.9.18"

serde_json = ""
